--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,4 +4,5 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.datasource.url=jdbc:postgresql://localhost:5432/cars
 spring.datasource.username=postgres
-spring.datasource.password=
+spring.datasource.password=postgres
+spring.jpa.hibernate.ddl-auto=update
